[#14737] Add Infinispan version information to JGroupsAddress
* Upgrade to JGroups 5.4.7.Final as we need https://github.com/belaban/JGroups/pull/901

---------

Signed-off-by: Pedro Ruivo <pruivo@redhat.com>
Signed-off-by: Ryan Emerson <remerson@redhat.com>
Co-authored-by: Ryan Emerson <remerson@redhat.com>